--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,24 +1,32 @@
 body
-	background-color: pink
-	margin: 0px
-	padding: 0px
+  background-color: pink
+  margin: 0px
+  padding: 0px
 
 .wrapper
-	height: 100vh
-	width: 100%
-	background: black
-	display: flex
+  height: 100vh
+  width: 100%
+  background: black
+  display: flex
+
 .list-item
-	display: flex
-	justify-content: space-around
-	align-items: center
-	width: 100%
-	margin: 0
-	padding: 0
+  display: flex
+  justify-content: space-around
+  align-items: center
+  width: 100%
+  margin: 0
+  padding: 0
 
-	li
-		height: 280px
-		width: 320px
-		background: #86ffde
-		justify-content: center
+  li
+    height: 280px
+    width: 320px
+    justify-content: center
 
+    /*-webkit-clip-path: polygon(16% 0, 100% 0, 100% 100%, 0 100%, 0 15%)
+        clip-path: polygon(16% 0, 100% 0, 100% 100%, 0 100%, 0 15%)*/
+    -webkit-clip-path: polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 100% calc(100% - 20px),calc(100% - 20px) 100%,  20px 100%, 0 calc(100% - 20px), 0 20px)
+    clip-path:  polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 100% calc(100% - 20px),  calc(100% - 20px) 100%,    20px 100%, 0 calc(100% - 20px), 0 20px)
+    padding: 1em 1.2em
+    max-width: 12em
+    color: white
+    font: 150%/1.6 Baskerville, Palatino, serif
